Fixed projects images padding and contact form button now visible

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -105,39 +105,7 @@ h2 {
 
 /* Hero image panel gallery */
 
-#hero-outer {
-    height: 500px;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-}
 
-#hero-image {
-    background: url("https://i.imgur.com/tzguRuV.png") no-repeat center center;
-    height: 600px;
-    display: flex;
-
-    align-self: center;
-    background-size: cover;
-    background-attachment: fixed;
-    align-items: center;
-    justify-content: center;
-
-    /* Animates zoom effect on loading the page */
-    animation-name: hero-zoom;
-    animation-duration: 3s;
-    animation-fill-mode: forwards;
-}
-/*  zoom for hero image */
-@keyframes hero-zoom {
-    from {
-        transform: scale(0.8);
-    }
-
-    to {
-        transform: scale(1);
-    }
-}
 
 
 /* main content */
@@ -325,7 +293,7 @@ footer>p {
     display: flex;
     font-family: Georgia, 'Times New Roman', Times, serif;
     flex-wrap: wrap;
-    padding: 0 10px 0 50px;
+    padding: 1px 1px 10px 20px;
     padding-bottom: 100px;
 
   }
@@ -447,7 +415,7 @@ footer>p {
 
 .mono {
     font-weight: bold;
-    font-style: italic;
+    font-family: sans-serif;
     font-size: larger;
     padding: 15px;
     text-align: center;
@@ -464,14 +432,14 @@ footer>p {
 }
 
 
-
+/*contact text container */
 .container {
     display: flex;
     clear: both;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 20px 20px 0 20px;
+    margin: 20px 20px 80px 20px;
 }
 
 .container .heading {
@@ -487,6 +455,7 @@ footer>p {
     
 
 }
+
 
 
 
@@ -580,7 +549,7 @@ footer>p {
 }
 
 @media only screen and (max-width: 643px) {
-
+   
 
     .container .heading {
         width: 100%;
